src/styles/components/navbar.css
.float-menu-button {
  border-radius: 12px;
  border: 0.2px solid var(--default-stroke, #c5cace);
  background: #fff;
  box-shadow: 0px 0px 25px 0px rgba(55, 84, 237, 0.05);
  cursor: pointer;
}

.navbar-wrapper {
  position: sticky;
  top: 0;
  left: 0;
  width: 100vw;
  height: 80px;
  display: grid;
  grid-template-columns: 1fr 8fr 1fr;
  background-color: #fff;
  z-index: 1000;
}
.navbar-wrapper .navbar-container {
  grid-column: 2;
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: space-between;
}
.navbar-wrapper .navbar-container .navbar-logo {
  color: #3754ed;
  font-size: 24px;
  font-weight: 900;
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
  cursor: pointer;
}

.navbar-buttons {
  display: flex;
  gap: 72px;
  flex-direction: row;
  align-items: center;
}
.navbar-buttons .sections {
  display: flex;
  gap: 24px;
  align-items: center;
  color: #3754ed;
  font-weight: 400;
}
.navbar-buttons .sections * {
  cursor: pointer;
}

.login-button {
  border: solid 0.2px #3754ed;
  padding: 8px 12px;
  border-radius: 12px;
  color: #3754ed;
  font-size: 16px;
  background-color: #fff;
  font-weight: 600;
  transition: box-shadow 0.2s ease-in;
  cursor: pointer;
}
.login-button:hover {
  box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.2s ease-out;
}
@media (max-width: 405px) {
  .login-button {
    display: none;
  }
}

.profile-info {
  position: relative;
  cursor: pointer;
}

.admin-logo {
  margin-right: 8px;
  display: inline-flex;
  font-weight: 800;
  font-size: 14px;
  background-color: #3754ed;
  color: #fff;
  width: 20px;
  height: 20px;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
}

@media (max-width: 768px) {
  .navbar-wrapper {
    height: 56px;
    grid-template-columns: 1fr 6fr 1fr;
  }
  .navbar-wrapper .navbar-container {
    padding: 0 12px;
  }
  .navbar-wrapper .navbar-container .navbar-logo {
    font-size: 18px;
  }
  .navbar-buttons {
    gap: 16px;
  }
  .navbar-buttons .sections {
    display: none;
  }
  .login-button {
    font-size: 14px;
    padding: 6px 10px;
  }
}
@media (max-width: 768px) {
  .navbar-buttons {
    gap: 16px;
  }
  .navbar-buttons .sections {
    display: none;
  }
  .navbar-mobile-menu {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 56px;
    left: 0;
    width: 100vw;
    background: #fff;
    z-index: 10001;
    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.04);
  }
  .navbar-mobile-menu .sections {
    display: flex !important;
    flex-direction: column;
    color: #3754ed;
    font-size: 16px;
    color: #0f0f0f;
  }
  .navbar-mobile-menu .sections * {
    cursor: pointer;
    border-bottom: 0.5px solid #e6e6e6;
    padding: 16px;
    padding-left: 36px;
    gap: 16px;
  }
}
.navbar-mobile-toggle {
  display: none;
}

@media (min-width: 768px) {
  .navbar-mobile-menu {
    display: none;
  }
}
@media (max-width: 768px) {
  .profile-info {
    display: none;
  }
  .navbar-mobile-toggle {
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
    border: none;
    font-size: 28px;
    color: #3754ed;
    cursor: pointer;
    margin-left: 12px;
    padding-bottom: 8px;
  }
  .navbar-buttons .sections {
    display: none;
  }
}/*# sourceMappingURL=navbar.css.map */

